little bit of styling

--- a/planets.html
+++ b/planets.html
@@ -1,6 +1,8 @@
-<div>
+<img id="swpic" src="https://s-media-cache-ak0.pinimg.com/originals/db/8f/47/db8f47d25eb072892dbb01e600798816.jpg" alt="">
+
+<h1>
   Planets:
-</div>
+</h1>
 
 <div ng-hide="planets">
   Planets Loading...
