--- a/resident.html
+++ b/resident.html
@@ -1,6 +1,10 @@
 <a ui-sref="planets">Back to Planets</a>
 <br>
 
+<h1>
+  Resident:
+</h1>
+
 Name: {{character.name}}
 <br>
 Gender: {{character.gender}}
