--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>AngularJS: UI-Router Quick Start</title>
-    <!-- Bootstrap CSS -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="container">
@@ -14,11 +14,8 @@
     </div>
   </div>
 
-  <!-- Angular -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.js"></script>
-  <!-- UI-Router -->
   <script src="//angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
-
   <script src="main.js"></script>
 
 </body>
