--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html ng-app="myapp">
 
 <head>
-    <title>AngularJS: UI-Router Quick Start</title>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <title>AngularJS: Star Wars API</title>
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
