--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.js"></script>
   <script src="//angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
-  <script src="main.js"></script>
+  <script src="main.min.js"></script>
 
 </body>
 
